--- a/project/src/main/res/layout/section_hotel_neighborhood_row.xml
+++ b/project/src/main/res/layout/section_hotel_neighborhood_row.xml
@@ -3,7 +3,7 @@
     android:id="@+id/filter_categories_widget"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="@dimen/hotel_neighborhood_height"
     android:orientation="horizontal"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
