--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -122,6 +122,7 @@
     <color name="hotel_filter_input_filed">#757575</color>
     <color name="hotel_filter_neighborhood_text">#676767</color>
     <color name="hotel_filter_show_more_less">#8B8B8B</color>
+    <color name="hotel_filter_text">#5c5c5c</color>
 
     <!-- Login -->
     <color name="login_text_hotels">#FFFFFF</color>
