5461 animate tooltip 5208 show keyboard with suggestions 5480 fix search to details anim from LOB

--- a/project/src/main/res/layout/activity_hotel.xml
+++ b/project/src/main/res/layout/activity_hotel.xml
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#EEEEEE"
-        android:visibility="gone"/>
+        android:visibility="invisible"/>
 
     <com.expedia.bookings.presenter.hotel.HotelCheckoutPresenter
         android:id="@+id/hotel_checkout_presenter"
