--- a/project/src/main/res/layout/hotel_cell.xml
+++ b/project/src/main/res/layout/hotel_cell.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:id="@id/root"
+<FrameLayout
+    android:id="@id/root"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -10,10 +11,10 @@
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
         android:layout_marginLeft="@dimen/car_search_list_image_container_margin"
         android:layout_marginRight="@dimen/car_search_list_image_container_margin"
         android:foreground="?android:attr/selectableItemBackground"
-        android:layout_marginBottom="12dp"
         app:cardCornerRadius="4dp"
         app:cardElevation="1dp">
 
@@ -70,7 +71,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:textColor="#ffffff"
-                        android:textSize="10sp"/>
+                        android:textSize="10sp" />
                 </LinearLayout>
 
                 <com.expedia.bookings.widget.TextView
@@ -81,9 +82,9 @@
                     android:paddingLeft="12dp"
                     android:paddingTop="12dp"
                     android:text="@string/vip"
-                    app:textStyle="medium"
                     android:textColor="#ffffff"
-                    android:textSize="9sp" />
+                    android:textSize="9sp"
+                    app:textStyle="medium" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -112,13 +113,24 @@
                         android:orientation="horizontal">
 
                         <com.expedia.bookings.widget.StarRatingBar
-                            android:id="@+id/hotel_rating_bar"
+                            android:id="@+id/star_rating_bar"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            app:star_spacing="4dp"
+                            android:visibility="gone"
                             app:star_color="#F1B906"
-                            app:star_drawable="@drawable/results_map_preview_star" />
+                            app:star_drawable="@drawable/results_map_preview_star"
+                            app:star_spacing="4dp" />
+
+                        <com.expedia.bookings.widget.StarRatingBar
+                            android:id="@+id/circle_rating_bar"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:visibility="gone"
+                            app:star_color="#F1B906"
+                            app:star_drawable="@drawable/ratingbar_circle"
+                            app:star_spacing="4dp" />
 
                         <com.expedia.bookings.widget.TextView
                             android:id="@+id/hotel_amenity_or_distance_from_location"
@@ -144,13 +156,13 @@
                         android:id="@+id/discount_percentage"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="2dp"
                         android:background="@drawable/guest_rating_background"
                         android:gravity="center"
                         android:paddingBottom="4dp"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
                         android:paddingTop="3dp"
-                        android:layout_marginBottom="2dp"
                         android:textColor="#ffffff"
                         android:textSize="10sp"
                         app:textStyle="medium" />
@@ -252,8 +264,8 @@
                         android:id="@+id/price_layout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center">
+                        android:gravity="center"
+                        android:orientation="horizontal">
 
                         <com.expedia.bookings.widget.TextView
                             android:id="@+id/strike_through_price"
