--- a/project/src/main/res/layout/hotel_marker_preview_cell.xml
+++ b/project/src/main/res/layout/hotel_marker_preview_cell.xml
@@ -46,12 +46,22 @@
                 android:orientation="horizontal">
 
                 <com.expedia.bookings.widget.StarRatingBar
-                    android:id="@+id/hotel_preview_rating"
+                    android:id="@+id/hotel_preview_star_rating"
                     android:layout_width="200dp"
                     android:layout_height="14dp"
-                    app:star_spacing="4dp"
+                    android:visibility="gone"
+                    app:star_color="#F1B906"
                     app:star_drawable="@drawable/results_map_preview_star"
-                    app:star_color="#F1B906" />
+                    app:star_spacing="4dp" />
+
+                <com.expedia.bookings.widget.StarRatingBar
+                    android:id="@+id/hotel_preview_circle_rating"
+                    android:layout_width="200dp"
+                    android:layout_height="14dp"
+                    android:visibility="gone"
+                    app:star_color="#F1B906"
+                    app:star_drawable="@drawable/ratingbar_circle"
+                    app:star_spacing="4dp" />
 
                 <LinearLayout
                     android:layout_width="0dp"
