--- a/project/src/main/res/layout/widget_hotel_detail.xml
+++ b/project/src/main/res/layout/widget_hotel_detail.xml
@@ -72,51 +72,63 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/gallery">
 
-                <LinearLayout
+                <RelativeLayout
                     android:id="@+id/promo_messaging_container"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#00877B"
-                    android:paddingBottom="10dp"
-                    android:paddingLeft="18dp"
-                    android:paddingRight="18dp"
-                    android:paddingTop="10dp">
+                    android:background="@color/hotel_promo_background"
+                    android:layout_height="wrap_content">
 
-                    <com.expedia.bookings.widget.TextView
-                        android:id="@+id/discount_percentage"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/guest_rating_background"
-                        android:gravity="center"
-                        android:paddingBottom="3dp"
-                        android:paddingLeft="5dp"
-                        android:paddingRight="5dp"
-                        android:paddingTop="3dp"
-                        android:textColor="#FFFFFF"
-                        android:textSize="10sp"
-                        app:textStyle="medium" />
+                        android:layout_alignParentLeft="true"
+                        android:paddingBottom="10dp"
+                        android:paddingLeft="18dp"
+                        android:paddingRight="18dp"
+                        android:paddingTop="10dp">
 
-                    <com.expedia.bookings.widget.TextView
-                        android:id="@+id/promo_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:textColor="#FFFFFF"
-                        android:textSize="11sp"
-                        app:textStyle="normal" />
+                        <com.expedia.bookings.widget.TextView
+                            android:id="@+id/discount_percentage"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="10dp"
+                            android:background="@drawable/guest_rating_background"
+                            android:gravity="center"
+                            android:paddingBottom="3dp"
+                            android:paddingLeft="5dp"
+                            android:paddingRight="5dp"
+                            android:paddingTop="3dp"
+                            android:textColor="#FFFFFF"
+                            android:textSize="10sp"
+                            app:textStyle="medium" />
+
+                        <com.expedia.bookings.widget.TextView
+                            android:id="@+id/promo_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:textColor="#FFFFFF"
+                            android:textSize="11sp"
+                            app:textStyle="normal" />
+                    </LinearLayout>
 
                     <com.expedia.bookings.widget.TextView
                         android:id="@+id/vip_access_message"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:background="@drawable/vip_info_select_ripple"
                         android:gravity="center_vertical|right"
+                        android:paddingBottom="13dp"
+                        android:paddingLeft="36dp"
+                        android:paddingRight="18dp"
+                        android:paddingTop="13dp"
                         android:text="@string/vip"
                         android:textColor="#FFFFFF"
                         android:textSize="11sp"
                         app:textStyle="medium" />
 
-                </LinearLayout>
+                </RelativeLayout>
 
                 <RelativeLayout
                     android:id="@+id/price_widget"
