--- a/project/src/main/res/layout/widget_hotel_detail_presenter.xml
+++ b/project/src/main/res/layout/widget_hotel_detail_presenter.xml
@@ -18,4 +18,10 @@
         android:layout_height="match_parent"
         android:visibility="gone" />
 
+    <com.expedia.bookings.widget.VIPAccessInfoWidget
+        android:id="@+id/hotel_vip_access_info"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
 </merge>
