--- a/project/src/airAsiaGo/res/values/colors.xml
+++ b/project/src/airAsiaGo/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="itin_flight_line_color">#5195BB</color>
     <color name="hotel_sale_text_color">@color/action_bar_bg_color</color>
     <color name="calendar_cell_selected_date_text">@android:color/primary_text_dark</color>
+    <color name="coupon_success_message_color">@color/aag_primary_color</color>
 
     <color name="tablet_confirmation_action_color">@color/aag_primary_color</color>
     <color name="tablet_sort_filter_done_selector">@color/aag_primary_color</color>
