--- a/project/src/voyages/res/values-sw600dp/colors.xml
+++ b/project/src/voyages/res/values-sw600dp/colors.xml
@@ -17,5 +17,6 @@
     <color name="tablet_hotel_filter_count_ring_color">@color/vsc_primary_color</color>
     <color name="details_ring_blue">@color/vsc_secondary_color</color>
     <color name="hotel_details_user_rating_text">@color/vsc_secondary_color</color>
+    <color name="tablet_hotel_coupon_text_color">@color/vsc_primary_color</color>
 
 </resources>
