--- a/project/src/main/res/layout/coupon_widget.xml
+++ b/project/src/main/res/layout/coupon_widget.xml
@@ -62,6 +62,7 @@
             android:layout_width="31dp"
             android:layout_height="31dp"
             android:layout_marginRight="13dp"
+            android:layout_gravity="center_vertical"
             android:padding="5dp"
             android:scaleType="center"
             android:src="@drawable/coupon" />
