4897: Price range bar
- Implement price range filtering with victor's design feedback
- Cleanup `HotelFilterViewModel` names and dataflow a little. Reduced global state.
- Update to support 23.1.0, RangeSeekBar was forcing 23.1.0 to be selected anyways
- Due to the update to 23.1.0 I needed to remove the white check mark icons
  from the xml. They are unnecessary anyways because we always override them.
- Had to change the drawables used by ShareView. It looks like updating the
  support library is causing a crash with `@null` drawables

--- a/project/src/main/res/values/styles.xml
+++ b/project/src/main/res/values/styles.xml
@@ -21,8 +21,8 @@
 
     <style name="Widget.ShareView.Invisible" parent="Widget.ShareView.Dark.Simple">
         <item name="sv_favoriteDisplayed">false</item>
-        <item name="sv_buttonDrawable">@null</item>
-        <item name="sv_buttonBackground">@null</item>
+        <item name="sv_buttonDrawable">@android:color/transparent</item>
+        <item name="sv_buttonBackground">@android:color/transparent</item>
     </style>
 
     <style name="NumberPickerButton">
