--- a/project/src/main/res/layout/widget_hotel_filter.xml
+++ b/project/src/main/res/layout/widget_hotel_filter.xml
@@ -129,16 +129,46 @@
                         android:id="@+id/price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/price"
-                        android:textSize="15sp"
+                        android:text="@string/price_range"
                         android:textColor="@color/hotel_filter_text"
-                        app:textStyle="medium"/>
+                        android:textSize="15sp"
+                        app:textStyle="medium" />
 
                     <LinearLayout
-                        android:id="@+id/price_range_bar"
+                        android:id="@+id/price_range_container"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical" />
+                        android:layout_marginTop="7dp"
+                        android:orientation="vertical">
+
+                        <FrameLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                android:id="@+id/price_range_min_text"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="left"
+                                android:textSize="13sp" />
+
+                            <TextView
+                                android:id="@+id/price_range_max_text"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="right"
+                                android:textSize="13sp" />
+
+                        </FrameLayout>
+
+                        <com.expedia.bookings.widget.FilterRangeSeekBar
+                            android:id="@+id/price_range_bar"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="6dp"
+                            app:rsb__activeColor="@color/hotels_primary_color" />
+
+                    </LinearLayout>
 
                     <com.expedia.bookings.widget.TextView
                         android:id="@+id/star_rating_bar"
@@ -408,7 +438,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="?attr/actionBarSize"
-                app:titleTextAppearance="@style/CarsToolbarTitleTextAppearance"></android.support.v7.widget.Toolbar>
+                app:titleTextAppearance="@style/CarsToolbarTitleTextAppearance" />
 
             <View
                 android:id="@+id/toolbar_dropshadow"
