--- a/project/src/main/res/drawable-v21/account_sign_in_button_ripple.xml
+++ b/project/src/main/res/drawable-v21/account_sign_in_button_ripple.xml
@@ -3,6 +3,7 @@
     android:color="?android:colorControlHighlight">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
+            <corners android:radius="3dp" />
             <solid android:color="#384768" />
         </shape>
     </item>
