--- a/project/src/main/res/layout/toolbar_filter_item.xml
+++ b/project/src/main/res/layout/toolbar_filter_item.xml
@@ -3,16 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/filter_btn"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="?attr/actionBarSize"
     android:fontFamily="sans-serif-medium"
     android:background="?android:attr/selectableItemBackground"
+    android:paddingLeft="5dp"
     android:orientation="horizontal">
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/filter_count_text"
         app:textStyle="medium"
+        android:layout_marginLeft="5dp"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:paddingBottom="1dp"
         android:paddingLeft="5.5dp"
         android:paddingRight="5.5dp"
@@ -36,6 +39,7 @@
         android:paddingRight="12dp"
         android:text="@string/filter"
         android:textColor="#FFFFFFFF"
+        android:gravity="center_vertical"
         android:textStyle="normal"
         android:textSize="14sp" />
 
