--- a/project/src/main/res/layout/gallery_image.xml
+++ b/project/src/main/res/layout/gallery_image.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
+<com.expedia.bookings.widget.HotelDetailsGalleryImageView
         xmlns:android="http://schemas.android.com/apk/res/android"
 		android:id="@+id/gallery_item_image_view"
 		android:layout_width="match_parent"
