--- a/project/src/main/res/layout/hotel_room_row.xml
+++ b/project/src/main/res/layout/hotel_room_row.xml
@@ -18,13 +18,36 @@
             android:background="@drawable/hotel_detail_ripple"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/room_header_image"
+
+            <FrameLayout
+                android:id="@+id/room_header_image_container"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:scaleType="fitCenter" />
+                android:layout_height="120dp">
+
+                <ImageView
+                    android:id="@+id/room_header_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:scaleType="centerCrop"/>
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/discount_percentage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/guest_rating_background"
+                    android:layout_gravity="bottom|right"
+                    android:gravity="center"
+                    android:paddingBottom="3dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:paddingTop="3dp"
+                    android:textColor="#FFFFFF"
+                    android:textSize="10sp"
+                    app:textStyle="medium"
+                    android:visibility="gone"/>
+            </FrameLayout>
 
             <RelativeLayout
                 android:id="@+id/collapsed_container"
@@ -111,46 +134,52 @@
                     android:visibility="gone" />
 
                 <LinearLayout
-                    android:id="@+id/price_container"
+                    android:id="@+id/room_price_container"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:orientation="vertical"
                     android:layout_marginRight="15dp"
-                    android:layout_marginTop="15dp"
-                    android:orientation="horizontal">
+                    android:layout_marginTop="15dp">
 
                     <com.expedia.bookings.widget.TextView
-                        android:id="@+id/daily_price_per_night"
+                        android:id="@+id/strike_through_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toLeftOf="@+id/per_night"
-                        android:textColor="@color/hotel_cell_disabled_text"
-                        android:textSize="17sp"
-                        app:textStyle="medium" />
+                        android:textColor="@color/hotel_cell_gray_text"
+                        android:alpha=".7"
+                        android:textSize="12sp"
+                        android:layout_above="@+id/price_container"
+                        android:layout_gravity="right"
+                        android:visibility="gone"/>
 
-                    <com.expedia.bookings.widget.TextView
-                        android:id="@+id/per_night"
+                    <LinearLayout
+                        android:id="@+id/price_container"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignBaseline="@+id/daily_price_per_night"
-                        android:text="@string/per_night"
-                        android:textColor="@color/hotel_cell_disabled_text"
-                        android:textSize="14sp"
-                        app:textStyle="normal" />
+                        android:layout_gravity="right"
+                        android:orientation="horizontal">
 
+                        <com.expedia.bookings.widget.TextView
+                            android:id="@+id/daily_price_per_night"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_toLeftOf="@+id/per_night"
+                            android:textColor="@color/hotel_cell_disabled_text"
+                            android:textSize="17sp"
+                            app:textStyle="medium" />
 
+                        <com.expedia.bookings.widget.TextView
+                            android:id="@+id/per_night"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignBaseline="@+id/daily_price_per_night"
+                            android:text="@string/per_night"
+                            android:textColor="@color/hotel_cell_disabled_text"
+                            android:textSize="14sp"
+                            app:textStyle="normal" />
+                    </LinearLayout>
                 </LinearLayout>
-
-                <com.expedia.bookings.widget.TextView
-                    android:id="@+id/total_price_per_night"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_below="@+id/price_container"
-                    android:layout_marginRight="15dp"
-                    android:textColor="@color/hotelsv2_checkout_text_color"
-                    android:textSize="12sp"
-                    app:textStyle="normal" />
 
                 <ToggleButton
                     android:id="@+id/view_room_button"
@@ -158,7 +187,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="36dp"
                     android:layout_alignParentRight="true"
-                    android:layout_below="@+id/total_price_per_night"
+                    android:layout_below="@+id/room_price_container"
                     android:layout_marginBottom="20dp"
                     android:layout_marginRight="15dp"
                     android:layout_marginTop="10dp"
