VSC : Fixed Itinerary screen crash

--- a/project/src/voyages/res/values/themes.xml
+++ b/project/src/voyages/res/values/themes.xml
@@ -182,6 +182,7 @@
         <item name="skin_itinActivityPlaceholderDrawable">@drawable/itin_header_placeholder_activities</item>
         <item name="skin_itinFlightsTripLineColor">@color/itin_flight_line_color</item>
         <item name="skin_itinAirAttachButtonDrawable">@drawable/btn_hotel_attach_normal</item>
+        <item name="skin_itinDismissListSelectorDrawable">?android:attr/selectableItemBackground</item>
     </style>
 
     <style name="LoginTheme" parent="Theme.Phone.Dark">
